<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#9CADC6"
        android:layout_margin="5dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_marginStart="5dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="14.5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/lastname"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/mail"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/phoneNumber"
                    android:textStyle="bold"
                    android:textSize="13sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/registerDate"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="14.5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>